# inspertor-rewrited

./: Dockerfile  Makefile  README.md  docker-compose-offline-obstacles.yml  docker-compose-offline.yml  docker-compose-online-obstacles.yml  docker-compose-online.yml  install_dependencies.sh  run.sh
ardupilot/: exampleAreas.json  exampleMission.txt
docs/: API.md  ASSESSMENT.md  QUALIFICATION.md  QUICK_START.md
kos/: CMakeLists.txt  cross-build.sh
kos/autopilot_connector/: CMakeLists.txt
kos/autopilot_connector/include/: autopilot_connector.h  autopilot_connector_interface.h
kos/autopilot_connector/src/: autopilot_connector.cpp  autopilot_connector_real.cpp  autopilot_connector_simulator.cpp  main.cpp
kos/credential_manager/: CMakeLists.txt
kos/credential_manager/include/: credential_manager.h  credential_manager_interface.h
kos/credential_manager/src/: credential_manager.cpp  credential_manager_offline.cpp  credential_manager_online.cpp  main.cpp
kos/einit/drone_controller/: CMakeLists.txt
kos/einit/drone_controller/src/: drone_controller.psl  pal_tests.psl.in  real_offline.psl.in  real_offline.yaml.in  real_online.psl.in  real_online.yaml.in  sim_offline.psl.in  sim_offline.yaml.in  sim_online.psl.in  sim_online.yaml.in
kos/einit/pal_tests/: CMakeLists.txt
kos/einit/unit_tests/: CMakeLists.txt
kos/flight_controller/: CMakeLists.txt
kos/flight_controller/include/: flight_controller.h
kos/flight_controller/src/: flight_controller.cpp  main_deliverer.cpp  main_inspector.cpp
kos/logger/: CMakeLists.txt
kos/logger/include/: logger_interface.h
kos/logger/src/: logger.cpp  main.cpp
kos/navigation_system/: CMakeLists.txt
kos/navigation_system/include/: navigation_system_interface.h
kos/navigation_system/src/: main.cpp  navigation_system_real.cpp  navigation_system_simulator.cpp
kos/periphery_controller/: CMakeLists.txt
kos/periphery_controller/include/: periphery_controller.h  periphery_controller_interface.h
kos/periphery_controller/src/: main.cpp  periphery_controller_real.cpp  periphery_controller_simulator.cpp
kos/resources/: AutopilotConnector.edl  CredentialManager.edl  CredentialManagerInterface.idl  Logger.edl  NavigationSystem.edl  PeripheryController.edl  PeripheryControllerInterface.idl  ServerConnector.edl
kos/server_connector/: CMakeLists.txt
kos/server_connector/include/: server_connector_interface.h
kos/server_connector/src/: main.cpp  server_connector_offline.cpp  server_connector_online.cpp
kos/shared/include/: ipc_messages_credential_manager.h  ipc_messages_periphery_controller.h
kos/shared/src/: ipc_messages_autopilot_connector.cpp  ipc_messages_credential_manager.cpp  ipc_messages_logger.cpp  ipc_messages_navigation_system.cpp  ipc_messages_periphery_controller.cpp  ipc_messages_server_connector.cpp
kos/unit_tests/: CMakeLists.txt
kos/unit_tests/src/: mock.cpp  unit_tests.cpp
mqtt-server/: aclfile
orvd/: .env  constants.py  context.py
orvd/clients/: mqtt_client.py
orvd/handlers/: admin_handlers.py  api_handlers.py  mqtt_handlers.py
orvd/routes/: api_routes.py  mqtt_routes.py
orvd/static/: admin.js
orvd/static/styles/: style.css
orvd/templates/: admin.html
recognizer/: .dockerignore  .gitignore  Dockerfile  main.py  requirements.txt
recognizer/resources/: char_recognition_prompt.txt
recognizer/src/core/: config.py
recognizer/src/mqtt/: handler.py
recognizer/src/recognizers/: __init__.py  base.py  stub_recognizer.py  vllm_recognizer.py
tests/: e2e-offline-docker-compose.yml  e2e-offline-obstacles-docker-compose.yml  e2e-online-docker-compose.yml  e2e-online-obstacles-docker-compose.yml
